# vlm_product_attribute_extraction

./: .gitignore  README.md  RUN_WINDOWS.txt  pyproject.toml  requirements.txt
configs/: train.yaml
data/sample/annotations/: train.jsonl  val.jsonl
docker/: Dockerfile
k8s/: deployment.yaml
scripts/: download_real_datasets.py  prepare_real_data.py  run_smoke_test.py
src/vlm_attr_extraction/: predict.py  train.py
src/vlm_attr_extraction/api/: app.py
src/vlm_attr_extraction/data/: dataset.py
src/vlm_attr_extraction/models/: model.py
src/vlm_attr_extraction/utils/: io.py
tests/: test_dataset.py
